--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,34 +1,230 @@
 *,
 html,
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Mulish", sans-serif;
+  font-family: 'Mulish', sans-serif;
 }
 
-.container{
-width: 100%;
-max-width: 1170px;
-margin: 0 auto;
+.container {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
 }
 
-nav{
+/* nav style start */
+nav {
   display: flex;
   text-align: center;
   justify-content: space-between;
-
 }
 
-.header-section{
-  display: flex;
+.left-header {
+  display: inline-flex;
   gap: 20px;
+  padding: 10px 0;
 }
 
-.header-nav{
-  padding-right: 10px;
+.title-logo {
+  width: 100%;
+  max-width: 48px;
 }
 
-.navigation-bar{
+.header-title {
+  color: #131318;
+  font-family: Mulish;
+  font-size: 36px;
+  font-weight: 800;
+}
+
+.chng-color {
+  color: #ff5400;
+  font-family: Mulish;
+  font-size: 36px;
+  font-weight: 800;
+}
+
+.right-header {
+  display: inline-flex;
+  padding: 10px 0px;
+  justify-content: center;
+  align-items: center;
+  gap: 44px;
+}
+
+.menu-img {
+  display: none;
+}
+
+.menu {
   text-decoration: none;
+  color: #424247;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.home-style {
+  color: #ff5400;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+/* nav styles end  */
+
+/* banner styles added */
+.banner-container {
+  background-image: url('../images/group.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 60px;
+  border-radius: 16px;
+}
+
+.banner {
+  width: 100%;
+  max-width: 1170px;
+  height: auto;
+  background: linear-gradient(
+    180deg,
+    rgba(19, 19, 24, 0.8) 0%,
+    rgba(19, 19, 24, 0) 100%
+  );
+  border-radius: 16px;
+}
+
+.banner-title {
+  display: block;
+  justify-content: center;
+  text-align: center;
+  padding: 106px 287px 20px 287px;
+}
+
+.banner-heading {
+  color: #fff;
+  font-family: Mulish;
+  font-size: 64px;
+  font-weight: 800;
+}
+
+.banner-para {
+  color: #fff;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.banner-input {
+  display: inline-flex;
+  padding: 16px;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.3);
+  margin: 48px 142px 106px 230px;
+}
+
+.banner-inp {
+  width: 100%;
+  max-width: 174px;
+  height: 52px;
+  padding: 10px;
+  border-radius: 8px;
+  background: #fff;
+  border: none;
+}
+
+.btn-primary {
+  width: 100%;
+  max-width: 174px;
+  height: 52px;
+  border-radius: 8px;
+  background: #ff5400;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 10px;
+}
+
+/* banner style end */
+
+/* Responsive for small mobile device */
+@media screen and (max-width: 576px) {
+  .container {
+    width: 100%;
+    max-width: 335px;
+    margin: 0 auto;
+  }
+
+  .left-header {
+    gap: 10px;
+  }
+
+  .title-logo {
+    width: 100%;
+    max-width: 28.724px;
+    height: 33.516px;
+  }
+
+  .header-title,
+  .chng-color {
+    font-size: 21.543px;
+  }
+
+  .right-header {
+    display: none;
+  }
+
+  .menu-img {
+    display: block;
+  }
+
+  .banner-container {
+    width: 100%;
+    max-width: 335px;
+    height: 483px;
+    margin-top: 18px;
+  }
+
+  .banner {
+    width: 100%;
+    max-width: 335px;
+    height: 483px;
+  }
+
+  .banner-title {
+    padding: 30px;
+  }
+
+  .banner-heading {
+    font-size: 22px;
+  }
+
+  .banner-para {
+    font-size: 14px;
+  }
+
+  .banner-input {
+    flex-direction: column;
+    gap: 16px;
+    margin: -13px 22px;
+    width: 287px;
+  }
+  .banner-inp {
+    max-width: 255px
+  }
+
+  .btn-primary {
+   max-width: 255px;
+   padding: 0 90px;
+  }
 }
