--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,7 +128,7 @@ nav {
   gap: 24px;
   border-radius: 8px;
   background: rgba(255, 255, 255, 0.3);
-  margin: 48px 142px 106px 230px;
+  margin: 48px 108px 106px 217px;
 }
 
 .banner-inp {
@@ -152,10 +152,63 @@ nav {
   text-align: center;
   font-size: 16px;
   font-weight: 700;
-  padding: 10px;
+  padding: 14px 35px;
 }
 
 /* banner style end */
+
+/* Popular Section Style Start */
+
+.popular-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 53px;
+  margin-top: 100px;
+}
+
+.popular-title {
+  color: #131318;
+  text-align: left;
+  font-family: Mulish;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.popular-paragaraph {
+  width: 577px;
+  color: rgba(19, 19, 24, 0.7);
+  font-family: Mulish;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  margin: 24px 0;
+}
+
+.popular-list{
+  width: 525px;
+  color: rgba(19, 19, 24, 0.7);
+  font-family: Mulish;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 10px;
+}
+
+.popular-heading > ul {
+  padding-left: 23px;
+}
+
+.popular-image{
+  width: 100%;
+  max-width: 540px;
+  height: 550px;
+  border-radius: 16px;
+}
+
+/* popular section styles end */
+
+/* destination section styles start */
+
 
 /* Responsive for small mobile device */
 @media screen and (max-width: 576px) {
@@ -220,11 +273,48 @@ nav {
     width: 287px;
   }
   .banner-inp {
-    max-width: 255px
+    max-width: 255px;
   }
 
   .btn-primary {
-   max-width: 255px;
-   padding: 0 90px;
+    max-width: 255px;
+    padding: 0 90px;
+  }
+
+  .popular-container{
+    flex-direction: column;
+  }
+
+  .popular-title {
+    font-size: 20px;
+  }
+
+  .popular-paragaraph{
+    width: 335px;
+    font-size: 14px;
+    margin: 16px 0;
+  }
+
+  .popular-list{
+    width: 335px;
+    font-size: 14px;
+    line-height: 28px;
+    margin-bottom: 12px;
+    margin: 0 -5px;
+  }
+
+  .popular-heading > ul {
+    padding-left: 20px;
+  }
+
+
+  .rectangle-image{
+     width: 335px;
+    height: 342px;
+  }
+
+  .read-more-btn{
+  max-width: 174px;
+  padding: 0;
   }
 }
