--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,11 +214,13 @@ nav {
 
 .destination-title {
   text-align: center;
+  margin-top: 100px;
 }
 
 .destination-para {
   text-align: center;
   margin: 15px auto;
+  margin-bottom: 48px;
 }
 
 .first-row-img {
@@ -242,8 +244,29 @@ nav {
   padding: 10px;
 }
 
+.img {
+  position: relative;
+}
+
+.p1-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  color: #fff;
+  font-size: 28px;
+  font-weight: 800;
+  margin: -11px -90px;
+}
+
 .places-img {
   width: auto;
+  border-radius: 16px;
+  background: linear-gradient(
+    0deg,
+    rgba(19, 19, 24, 0.2) 0%,
+    rgba(19, 19, 24, 0.2) 100%
+  );
 }
 
 .first-row-img .places-img {
@@ -345,6 +368,131 @@ nav {
   font-weight: 400;
   line-height: 26px;
 }
+
+.time-img {
+  width: 100%;
+  max-width: 24px;
+  height: 24px;
+  align-items: center;
+  justify-content: center;
+}
+
+.time-img {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+}
+
+.date,
+.people,
+.location {
+  display: inline-flex;
+  gap: 24px;
+  color: #5a5a5d;
+  font-family: Mulish;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 52px;
+  margin-left: 50px;
+}
+
+.discount-offer {
+  width: 100%;
+  max-width: 1170px;
+  height: 500px;
+  border-radius: 16px;
+  background-image: url('../images/discount.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 19px;
+  margin-top: 24px;
+}
+
+.discount-offer2 {
+  width: 1170px;
+  height: 500px;
+  border-radius: 16px;
+  background-image: url('../images/discount.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 19px;
+  margin-top: 24px;
+  transform: scaleX(-1);
+}
+
+.flip-time {
+  transform: scaleX(-1);
+}
+.discount-offer3 {
+  width: 1170px;
+  height: 500px;
+  border-radius: 16px;
+  background-image: url('../images/discount.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 19px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.location-time {
+  width: 100%;
+  max-width: 585px;
+  margin-left: 510px;
+  margin-top: 46px;
+  border: 2px solid #fff;
+  border-radius: 16px;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2.5px);
+}
+
+.place-name {
+  color: #131318;
+  font-family: Mulish;
+  font-size: 24px;
+  font-weight: 800;
+  margin-top: 26px;
+  margin-bottom: 16px;
+  margin-left: 50px;
+}
+
+.place-details {
+  max-width: 452px;
+  color: #5a5a5d;
+  font-family: Mulish;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 16px;
+  margin-left: 50px;
+}
+
+.place-prices {
+  color: #ff5400;
+  font-family: Mulish;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  margin-bottom: 24px;
+  margin-left: 50px;
+}
+
+.place-btn {
+  margin-bottom: 50px;
+  margin-left: 50px;
+}
+
+.packages-btn {
+  width: 210px;
+  height: 52px;
+  padding: 0 15px;
+  margin: 0 500px;
+  margin-bottom: 100px;
+}
+
 /* Responsive for small mobile device */
 @media screen and (max-width: 576px) {
   .container {
