--- a/styles/styles.css
+++ b/styles/styles.css
@@ -493,6 +493,85 @@ nav {
   margin-bottom: 100px;
 }
 
+/* choose section styles end */
+
+/* Perfect place section styles start */
+.perfect-place {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.perfect-title {
+  width: 448px;
+  line-height: 60px;
+}
+
+.perfect-paragraph {
+  width: 532px;
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  margin: 24px auto;
+}
+
+.perfect-wrapper li {
+  width: 518px;
+  color: #131318;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 26px;
+  margin-bottom: 16px;
+}
+
+.perfect-wrapper > ul {
+  padding-left: 19px;
+}
+
+.perfect-video {
+  width: 610px;
+  height: 424px;
+  background-image: url('../images/bangla.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 16px;
+  position: relative;
+}
+
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('path/to/your/image.jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.7; /* Adjust opacity as needed */
+  z-index: 1; /* Set a higher z-index for the background */
+}
+
+.video-controls {
+  position: relative;
+  z-index: 2;
+}
+
+.video-img{
+  display: inline-flex;
+}
+
+.perfect-video-title {
+  width: 276px;
+  color: #fff;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  margin: 176px auto;
+}
+
 /* Responsive for small mobile device */
 @media screen and (max-width: 576px) {
   .container {
