--- a/styles/styles.css
+++ b/styles/styles.css
@@ -225,21 +225,21 @@ nav {
 
 .first-row-img {
   display: grid;
-  grid-template-columns: repeat(2, 573px);
+  grid-template-columns: 1fr 1fr;
   gap: 24px;
   padding: 10px;
 }
 
 .second-row-img {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1.5fr 1fr;
   gap: 24px;
   padding: 10px;
 }
 
 .third-row-img {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1.5fr;
   gap: 24px;
   padding: 10px;
 }
@@ -248,19 +248,20 @@ nav {
   position: relative;
 }
 
-.p1-img {
+.p-img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 100%;
+  transform: translate(-50%, -50%);
   color: #fff;
   font-size: 28px;
   font-weight: 800;
-  margin: -11px -90px;
+  /* margin: -11px -90px; */
 }
 
 .places-img {
-  width: auto;
+  width: 100%;
+  height: 287px;
   border-radius: 16px;
   background: linear-gradient(
     0deg,
@@ -269,7 +270,7 @@ nav {
   );
 }
 
-.first-row-img .places-img {
+/* .first-row-img .places-img {
   height: 300px;
 }
 
@@ -286,9 +287,9 @@ nav {
 .second-row-img .places-img:nth-child(3) {
   max-width: 274px;
   height: 286px;
-}
+} */
 
-.third-row-img .places-img:nth-child(1) {
+/* .third-row-img .places-img:nth-child(1) {
   max-width: 473px;
   height: 300px;
 }
@@ -296,7 +297,7 @@ nav {
 .third-row-img .places-img:nth-child(2) {
   max-width: 673px;
   height: 300px;
-}
+} */
 
 /* destination section styles end */
 
@@ -500,6 +501,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 30px;
 }
 
 .perfect-title {
@@ -539,26 +541,75 @@ nav {
   position: relative;
 }
 
+.vertical-line {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  padding: 13px;
+  box-sizing: border-box;
+  margin-bottom: 11px;
+}
+
+.hr-first-side{
+    width: 80px;
+    height: 4px;
+}
+
+.hr-second-side{
+  width: 500px;
+height: 4px;
+border-radius: 8px;
+}
+
 .video-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('path/to/your/image.jpg');
-  background-size: cover;
-  background-position: center;
-  opacity: 0.7; /* Adjust opacity as needed */
-  z-index: 1; /* Set a higher z-index for the background */
+  background: linear-gradient(
+    180deg,
+    #131318 -31.96%,
+    rgba(19, 19, 24, 0) 100%
+  );
+  border-radius: 16px;
+  opacity: 0.7;
+  z-index: 1;
 }
+
 
 .video-controls {
   position: relative;
   z-index: 2;
 }
 
-.video-img{
+.video-setting {
+  display: flex;
+  justify-content: space-between;
+}
+
+.video-img {
   display: inline-flex;
+  margin: 354px 24px;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+}
+
+.video-img-para {
+  color: #f3f3f3;
+  padding-bottom: 5px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.video-icons {
+  display: inline-flex;
+  margin: 354px 24px;
+  gap: 12px;
 }
 
 .perfect-video-title {
@@ -571,6 +622,10 @@ nav {
   line-height: 36px;
   margin: 176px auto;
 }
+
+
+
+/*  Perfect place section styles end */
 
 /* Responsive for small mobile device */
 @media screen and (max-width: 576px) {
