--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,7 +78,7 @@ nav {
 
 /* banner styles added */
 .banner-container {
-  background-image: url('../images/background.png');
+  background-image: url('../resources/background.png');
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 60px;
@@ -374,7 +374,7 @@ nav {
   max-width: 1170px;
   height: 500px;
   border-radius: 16px;
-  background-image: url('../images/discount.png');
+  background-image: url('../resources/discount.png');
   background-size: contain;
   background-repeat: no-repeat;
   padding: 19px;
@@ -385,7 +385,7 @@ nav {
   width: 1170px;
   height: 500px;
   border-radius: 16px;
-  background-image: url('../images/discount.png');
+  background-image: url('../resources/discount.png');
   background-size: contain;
   background-repeat: no-repeat;
   padding: 19px;
@@ -400,7 +400,7 @@ nav {
   width: 1170px;
   height: 500px;
   border-radius: 16px;
-  background-image: url('../images/discount.png');
+  background-image: url('../resources/discount.png');
   background-size: contain;
   background-repeat: no-repeat;
   padding: 19px;
@@ -504,7 +504,7 @@ nav {
 .perfect-video {
   width: 610px;
   height: 424px;
-  background-image: url('../images/bangla.png');
+  background-image: url('../resources/bangla.png');
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 16px;
@@ -682,7 +682,7 @@ nav {
 .newsletter-container-right {
   width: 672px;
   height: 422px;
-  background-image: url('../images/newsletter.png');
+  background-image: url('../resources/newsletter.png');
   border-radius: 16px;
 }
 
@@ -931,7 +931,7 @@ nav {
   .discount-offer3 {
     max-width: 335px;
     height: 500px;
-    background-image: url('../images/discount_img.png');
+    background-image: url('../resources/discount_img.png');
     object-fit: contain;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
