--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1098,6 +1098,7 @@ nav {
   .footer-section {
     width: 375px;
     height: 309px;
+    margin: 0px 25px;
   }
 
   .footer-heading {
@@ -1140,3 +1141,4 @@ nav {
     margin: 0 103px;
   }
 }
+
