added styles in p-img

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,6 +296,7 @@ nav {
   color: #fff;
   font-size: 28px;
   font-weight: 800;
+  white-space: nowrap;
 }
 
 .places-img {
@@ -1145,7 +1146,8 @@ nav {
   }
 
   .footer-section {
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     height: 309px;
     margin: 0px -2px;
     overflow: hidden;
